--- a/main.css
+++ b/main.css
@@ -1,117 +1,129 @@
-#website, body
+*
 {
-    padding: 0%;
-    margin: 0%;
-    height: 100vh;
-    width: 100vw;
+	margin: 0;
+	padding: 0;
 }
-#website
+body
 {
-    --primary-color: rgb(129, 107, 129);
-    --secondary-color: rgb(2, 0, 34);
-    --project-text-color: rgb(3, 0, 27);
-    --distinct-link-color: rgb(9, 0, 78);
-    --projects-border-color: black;
-    font-size: 2.5vh;
-    font-family: sans-serif;
-    background-color: var(--primary-color);
-    background-image: linear-gradient(var(--secondary-color), var(--primary-color));
+	--bg-color-one: rgb(38, 0, 135);
+	--bg-color-two: rgb(20, 20, 50);
+	--highlight-color: rgb(89, 23, 255);
+	--border-color: rgb(67, 52, 106);
+	--low-profile-color: rgb(65, 65, 65);
+	color: white;
+	
+	width: 100%;
+	height: 100%;
+	background-color: var(--bg-color-two);
 }
-#Projects
+body>div
 {
-    border: solid 0.1vmin var(--projects-border-color);
-    font-size: 2.5vmin;
-    color: var(--project-text-color);
-    text-align: center;
-    border-radius: 2%;
-    border-top-left-radius: 7%;
-    border-bottom-right-radius: 7%;
-    background-size: cover;
-    position:fixed;
-    left: 34%;
-    top: 15%;
-    right: 34%;
-    bottom: 13%;
-    background-color: var(--secondary-color);
-    background-image: linear-gradient(var(--primary-color), var(--secondary-color));
+	display: flex;
+	flex-wrap: wrap;
+	align-items: stretch;
 }
-ul
+#bg_gradient
 {
-    text-align: left;
-    padding-left: 10%;
+	position: fixed;
+	inset: 0;
+  	z-index: -1;
+	width: 100vw;
+	height: 40vh;
+	background-image: linear-gradient(var(--bg-color-one), var(--bg-color-two));
+}
+
+.box
+{
+	display: inline-flex;
+	flex-direction: row;
+	padding: 1em;
+	margin: 1em;
+	border-radius: 20px;
+	border: var(--border-color) solid 2px;
+	background-color: var(--bg-color-two);
+	width: 30%;
+	transition: border-color 0.5s ease;
+}
+.box:hover
+{
+	border-color: var(--highlight-color);
+}
+@media(max-width: 1536px)
+{
+	.box
+	{
+		width: 100%;
+	}
+}
+.box>img
+{
+	height: 250px;
+	margin-right: 1em;
+}
+.box>div
+{
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
 }
 a
 {
-    color: var(--project-text-color);
-}
-#Name
-{
-    position: fixed;
+	line-height: 1.5em;
+	color: var(--highlight-color);
 
-    padding: 0.6%;
-    padding-bottom: 0%;
-
-    height: 8%;
-    width: 100%;
-    top:1%;
-
-    background-size: cover;
-    background-color: black;
-    font-family: 'Times New Roman';
-    color: white;
+	--outline-size: 2px;
+	--outline-size-negative: calc(-1 * var(--outline-size));
+	--outline-color: var(--bg-color-one);
+	text-shadow:
+		var(--outline-size-negative) var(--outline-size-negative) var(--outline-color),
+		var(--outline-size-negative) var(--outline-size) var(--outline-color),
+		var(--outline-size) var(--outline-size) var(--outline-color),
+		var(--outline-size) var(--outline-size-negative) var(--outline-color),
+		0 var(--outline-size) var(--outline-color),
+		var(--outline-size) 0 var(--outline-color),
+		0 var(--outline-size-negative) var(--outline-color),
+		var(--outline-size-negative) 0 var(--outline-color);
+	
+	font-weight: bold;
 }
-#Name img
+.footnote
 {
-    vertical-align: text-bottom;
-    height: 6vmin;
+	margin-top: auto;
+	font-size: 0.75em;
+	color: var(--low-profile-color);
+	transition: color 0.5s ease;
 }
-#Name h1
+.footnote:hover
 {
-    vertical-align: center;
-    display:inline;
+	color: var(--highlight-color);
+	font-weight: bold;
 }
-#Name a
+#theme-selector
 {
-    all: inherit;
+	margin: 1em;
 }
-a.blue
+#theme-selector>a
 {
-    color: var(--distinct-link-color);
+	margin: 0.2em;
+	display: inline-block;
+	width: 2em;
+	height: 2em;
+	border-radius: 100%;
+	border: 2px solid var(--border-color);
 }
-#color-presets
+#theme-selector>a[href=""]
 {
-    background-color: black;
-    border: white 0.3vh solid;
-    border-radius: 3vh;
-    position: absolute;
-    bottom: 3vh;
-    left: 1.5vw;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    vertical-align: middle;
+	background-color: blueviolet;
 }
-button
+#green_theme
 {
-    margin: 1vh;
-    border: solid 0.1vh;
-    width: 10vh;
-    height: 10vh;
-    border-radius: 10vw;
+	background-color: green;
 }
-#default
+body:has(#green_theme:target)
 {
-    background-image: linear-gradient(rgb(129, 107, 129), rgb(2, 0, 34));
-}
-#high_contrast
-{
-    background-color: cyan;
-}
-#high_contrast_theme:target ~ #website
-{
-    --primary-color: #101010;
-    --secondary-color: #101010;
-    --project-text-color: cyan;
-    --distinct-link-color: yellow;
-    --projects-border-color: white;
+	--bg-color-one: rgb(0, 135, 0);
+	--bg-color-two: rgb(20, 50, 21);
+	--highlight-color: rgb(46, 255, 23);
+	--border-color: rgb(52, 106, 52);
+	--low-profile-color: rgb(75, 75, 75);
 }
